# virtual_people_examples

./: .bazelrc  .gitignore  Consistent_Hashing.ipynb  Panel_size_implication_for_error.ipynb  README.md  WORKSPACE
.github/: integration_test.cfg  integration_test.sh
.github/workflows/: build-test.yml  integration_test.yaml
notebooks/: Adaptive_Dirac_Mixture_Training.ipynb  Combining_Dirac_Mixtures.ipynb  Consistent_Hashing.ipynb  DeepLiquidSampling.ipynb  Geometric_Shredding.ipynb  OM_toy_model.ipynb  Panel_size_implication_for_error.ipynb  Particle_Ensemble_Adaptive_Dirac_Mixture.ipynb  TV_modeling_with_Virtual_People.ipynb  toy_model.ipynb  toy_model_with_strs.ipynb
src/main/cc/wfa/virtual_people/events_generator/: BUILD.bazel  events_generator.cc  events_generator.h  events_generator_main.cc  random_generator.cc  random_generator.h
src/main/cc/wfa/virtual_people/model_applier/: BUILD.bazel  example_input.textproto  model_applier.cc  model_applier.proto
src/main/textproto/wfa/virtual_people/examples/labeler_events_example/: BUILD.bazel  labeler_events_01.textproto  labeler_events_02.textproto  labeler_events_03.textproto  labeler_events_04.textproto  labeler_events_05.textproto  labeler_events_06.textproto  labeler_events_07.textproto  labeler_events_08.textproto  labeler_events_09.textproto  labeler_events_10.textproto
src/test/cc/wfa/virtual_people/events_generator/: BUILD.bazel  events_generator_test.cc  random_generator_test.cc
src/test/cc/wfa/virtual_people/examples/labeler_events_example/: BUILD.bazel  labeler_events_example_test.cc
src/test/cc/wfa/virtual_people/model_applier/: BUILD.bazel  model_applier_test.cc
src/test/cc/wfa/virtual_people/model_applier/textproto/: input_events.textproto  toy_model.textproto
src/test/cc/wfa/virtual_people/model_applier/textproto/expected/: output_events.txt  output_reports.txt
src/test/cc/wfa/virtual_people/model_applier/textproto/integration_tests_data/: input_events.textproto
test_model_configs/: correct_updaters.txt  single_population_node_with_updaters_config.txt  toy_model_config_correct.txt  toy_model_config_final_draft.txt  toy_model_config_final_draft_1.txt  toy_model_config_with_100_prob.txt  toy_model_test_config.txt
