load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//src:__subpackages__"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "random_generator",
    srcs = ["random_generator.cc"],
    hdrs = ["random_generator.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@farmhash",
    ],
)

cc_library(
    name = "events_generator",
    srcs = ["events_generator.cc"],
    hdrs = ["events_generator.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":random_generator",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:demographic_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:geo_location_cc_proto",
    ],
)

cc_binary(
    name = "events_generator_main",
    srcs = ["events_generator_main.cc"],
    deps = [
        ":events_generator",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
    ],
)
