load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:private"])

proto_library(
    name = "model_applier_proto",
    srcs = ["model_applier.proto"],
    deps = [
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:label_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_proto",
    ],
)

cc_proto_library(
    name = "model_applier_cc_proto",
    deps = [":model_applier_proto"],
)

cc_binary(
    name = "model_applier",
    srcs = ["model_applier.cc"],
    deps = [
        ":model_applier_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@virtual_people_core_serving//src/main/cc/wfa/virtual_people/core/labeler",
    ],
)
