load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "model_applier_test",
    srcs = ["model_applier_test.cc"],
    data = [":model_applier_genrule"],
    deps = [
        "//src/main/cc/wfa/virtual_people/model_applier:model_applier",
        "@com_google_googletest//:gtest_main",
    ],
)

genrule(
    name = "model_applier_genrule",
    srcs = [
        "//src/test/cc/wfa/virtual_people/model_applier/textproto:toy_model.textproto",
        "//src/test/cc/wfa/virtual_people/model_applier/textproto:input_events.textproto",
    ],
    outs = [
        "output_events.txt",
        "output_reports.txt"
    ],
    cmd = "$(location //src/main/cc/wfa/virtual_people/model_applier:model_applier)" + 
        "--model_node_path $(location //src/test/cc/wfa/virtual_people/model_applier/textproto:toy_model.textproto)" + 
        "--input_path $(location //src/test/cc/wfa/virtual_people/model_applier/textproto:input_events.textproto)" +
        "--output_path $(RULEDIR)",
    exec_tools = ["//src/main/cc/wfa/virtual_people/model_applier:model_applier"],
)
